--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npm run typeorm migration:generate -- -d src/data-source.ts",
-    "migration:run": "npm run typeorm migration:run -- -d dist/data-source.ts",
+    "migration:run": "npm run typeorm migration:run -- -d dist/data-source.js",
     "migration:revert": "npm run typeorm migration:revert -- -d src/data-source.ts"
   },
   "dependencies": {
